# handao

./: CMakeLists.txt  README.md
assets/: note.txt
src/: CMakeLists.txt  dictionary.cpp  dictionary.hpp  handao.rc  main.cpp  resultPopUp.cpp  resultPopUp.hpp  utils.cpp  utils.hpp
